# Autonomous_driving_practices

./: README.md  hsv_fit.py  lane_finding.py
lane_detector_LKAS/: CMakeLists.txt  README.md  package.xml
lane_detector_LKAS/include/lane_detector/: InToOutLaneDetector.h  LaneDetector.h  LaneDetectorNode.h  LinePointDetector.h  MyException.h
lane_detector_LKAS/launch/include/: factor_test.md  lane_detector.launch
lane_detector_LKAS/src/: InToOutLaneDetector.cpp  LaneDetector.cpp  LaneDetectorNode.cpp  LinePointDetector.cpp  main.cpp
new_lane/: CMakeLists.txt  package.xml
new_lane/cfg/: frenet_planner.yaml
new_lane/include/new_lane/: frenetROS_obst.hpp  frenet_optimal_trajectory.hpp  lane_changer.h
new_lane/launch/: new_lane.launch
new_lane/msg/: lidar_topic_msg.msg
new_lane/rviz/: lane_changer_rviz.rviz
new_lane/src/: cubic_spline_planner.cpp  frenet_optimal_trajectory.cpp  lane_changer.cpp  polynomials.cpp
traffic_light/: CMakeLists.txt  package.xml
traffic_light/include/traffic_light/: traffic_light.h
traffic_light/launch/: traffic_light.launch
traffic_light/src/: traffic_light.cpp
usb_cam/launch/: yolo.launch
usb_cam/nodes/: usb_cam_node.cpp
waypoint_follower/: CMakeLists.txt  CMakeLists.txt~  package.xml
waypoint_follower/include/waypoint_follower/: new_platform_control.h  waypointFollower.h
waypoint_follower/launch/: waypoint_follower.launch
waypoint_follower/src/: new_main.cpp  new_path_tracking.cpp  new_process.cpp
waypoint_maker/: CMakeLists.txt  package.xml
waypoint_maker/include/: LinearKF_HJ.hpp  cubic_spline_planner.hpp  load_global_path.hpp  spline_csv_maker.hpp
waypoint_maker/launch/: spline_csv_maker.launch  waypoint_loader.launch  waypoint_loader_1.launch  waypoint_loader_10.launch  waypoint_loader_11.launch  waypoint_loader_12.launch  waypoint_loader_2.launch  waypoint_loader_3.launch  waypoint_loader_4.launch  waypoint_loader_5.launch  waypoint_loader_6.launch  waypoint_loader_7.launch  waypoint_loader_8.launch  waypoint_loader_9.launch  waypoint_saver.launch
waypoint_maker/msg/: Lane.msg  State.msg  Waypoint.msg
waypoint_maker/rviz/: path (copy).rviz  path.rviz
waypoint_maker/src/: cubic_spline_planner.cpp  new_waypoint_loader.cpp  new_waypoint_saver.cpp  spline_csv_maker.cpp
