<?xml version="1.0"?>
<package format="2">
  <name>waypoint_follower</name>
  <version>0.0.0</version>
  <description>The waypoint_follower package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kuuve@todo.todo">kuuve</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_msgs</build_depend>  
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>ackermann_msgs</build_depend>    
  <build_depend>roscpp</build_depend>
  <build_depend>waypoint_maker</build_depend>  
  <build_depend>serial</build_depend>  
  <build_depend>erp_driver</build_depend>

    
  <build_export_depend>nav_msgs</build_export_depend>  
  <build_export_depend>std_msgs</build_export_depend> 
  <build_export_depend>geometry_msgs</build_export_depend>  
  <build_export_depend>ackermann_msgs</build_export_depend>    
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>waypoint_maker</build_export_depend>  
  <build_export_depend>serial</build_export_depend>   
  <build_export_depend>erp_driver</build_export_depend>   

  
  <exec_depend>nav_msgs</exec_depend>  
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>ackermann_msgs</exec_depend>    
  <exec_depend>roscpp</exec_depend>
  <exec_depend>waypoint_maker</exec_depend>  
  <exec_depend>serial</exec_depend>  
  <exec_depend>erp_driver</exec_depend>  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
